# TUYA_AI_DOOR_SDK

./: FAQ.md  README.md
demo/: CMakeLists.txt  README.md  cross_build.sh
demo/include/: common_type.h  tuya_ai_pad_sdk.h  tuya_media_sdk.h
demo/src/: Singleton.h  acs_callback.cpp  acs_handlers.cpp  acs_handlers.h  main.cpp  media_test.cpp  media_test.h  mongoose.c  mongoose.h  restApi.cpp  restApi.h  spin_lock.h
saas/: cross_build.sh
saas/include/: common_type.h
saas/src/: acs_callback.cpp  acs_callback.h  ctpl.h  media_test.h  mongoose.h  restApi.h
web_dist/: index.html
web_dist/static/css/: app.e721ffff.css  chunk-1d043970.3fb49215.css  chunk-319fe1ba.62afc751.css  chunk-654c4dc4.b86a7c30.css  chunk-7e03b7c6.4dc3a226.css  chunk-a6192bdc.3de258ac.css
web_dist/static/js/: app.075e1b16.js  app.35b349de.js  app.db5f0eb7.js  app.dee1cf60.js  app.f3530906.js  chunk-07dea663.bd95a9f5.js  chunk-1ae78a1a.36eb95f7.js  chunk-1d043970.7c93bc3d.js  chunk-1f21309d.67031edd.js  chunk-262a480c.303e8f4c.js  chunk-2731b705.00303120.js  chunk-2d21f4d7.48ad5af5.js  chunk-319fe1ba.73f8f5b9.js  chunk-31b9cda4.a4a3a2b7.js  chunk-34b659ec.6fb7aa9b.js  chunk-3cdc8938.60320e9d.js  chunk-5601f8f4.c17b484b.js  chunk-5deaaffa.ee75d341.js  chunk-5e77a1ab.37ae9b87.js  chunk-654c4dc4.0072cc00.js  chunk-6ade1460.e059b6b7.js  chunk-738b70e2.9870e239.js  chunk-79b62882.d088840e.js  chunk-7a8911e6.98bec8e1.js  chunk-7e03b7c6.3bb3f335.js  chunk-80a9c9e0.ba7b0698.js  chunk-a6192bdc.bc7cf259.js  chunk-ab072dd2.6891e64b.js  chunk-dda16dac.d1d9ba65.js  chunk-efbd270c.3e404fa2.js  (+8 more)
